--- a/src/App.scss
+++ b/src/App.scss
@@ -2,17 +2,17 @@
   background: #141E30; /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #243B55, #141E30); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color:white;
 
   min-height: 100vh;
 
   display: flex;
   flex-direction: column;
 
-  padding-top: 3rem;
-
   .navigation {
+    padding: 2rem 0;
     .navigationLink {
-      padding: 2rem;
+      padding: 0 2rem;
       color: rgba(255, 255, 255, 0.8);
       font-weight: bold;
       text-decoration: none;
@@ -20,6 +20,10 @@
 
       &:hover {
         color: white;
+      }
+
+      &:last-child {
+        padding-right: 0;
       }
     }
   }
