--- a/src/views/Search/Search.scss
+++ b/src/views/Search/Search.scss
@@ -1,5 +1,9 @@
 .searchContainer {
   margin-top: 3rem;
+
+  .searchLoading {
+    margin-top: 2rem;
+  }
 }
 
 .searchErrorMessage {
@@ -39,18 +43,20 @@
 .pagination {
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
+  margin-top: 2rem;
 
   .MuiPaginationItem-outlined {
-    color: white;
     border: 1px solid rgba(255, 255, 255, 0.23);
   }
   .MuiPaginationItem-page.Mui-selected {
     background-color: rgba(255, 255, 255, 0.08);
   }
   .MuiPaginationItem-outlinedSecondary.Mui-selected {
-    color: white;
     border: 1px solid rgba(255, 0, 255, 0.5);
     background-color: rgba(255, 255, 255, 0.12);
+  }
+
+  .MuiPaginationItem-root {
+    color: white;
   }
 }
